--- a/server/.env
+++ b/server/.env
@@ -1,11 +1,11 @@
-PORT = 5001
-DB_URL = "mongodb+srv://Vasia:Pashku475000@cluster0.oasvn2y.mongodb.net/bdUZHNUclub?retryWrites=true&w=majority&appName=Cluster0
+PORT=5001
+DB_URL ="mongodb+srv://Vasia:Pashku475000@cluster0.oasvn2y.mongodb.net/bdUZHNUclub?retryWrites=true&w=majority&appName=Cluster0
 "
-JWT_ACCESS_SECRET= jwt-secret-key
-JWT_REFRESH_SECRET= jwt-refresh-secret-key
+JWT_ACCESS_SECRET=jwt-secret-key
+JWT_REFRESH_SECRET=jwt-refresh-secret-key
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
 SMTP_USER=fen41k2006@gmail.com
-SMTP_PASSWORD =jbvc xcoe xzkf eoyu
-API_URL =http/localhost:5001
-CLIENT_URL = https://www.youtube.com/
+SMTP_PASSWORD=jbvc xcoe xzkf eoyu
+API_URL=http://localhost:5001
+CLIENT_URL=http://localhost:5173
