lab8 unittest: add Cypress component tests and coverage setup test

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -22,3 +22,59 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Node
+node_modules/
+
+# Build output
+dist/
+dist-ssr/
+build/
+
+# Local env files
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+
+# Cypress
+cypress/videos/
+cypress/screenshots/
+cypress/downloads/
+
+# Cypress + Coverage
+coverage/
+.nyc_output/
+
+# Vite cache
+.vite/
+.cache/
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea/
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Mac system files
+.AppleDouble
+.LSOverride
+
+# Other
+*.pid
+*.seed
+*.pid.lock
