--- a/server/.env
+++ b/server/.env
@@ -8,4 +8,4 @@ SMTP_PORT=587
 SMTP_USER=fen41k2006@gmail.com
 SMTP_PASSWORD=jbvc xcoe xzkf eoyu
 API_URL=http://localhost:5001
-CLIENT_URL=http://localhost:5173
+CLIENT_URL=https://uz-it-bears-bzfu.vercel.app
